examples/semantics/errors/error18b.grace
fun error18b () : nothing
	fun foo(i1:int): nothing
	{
		puti(8);
	}
{
	foo(8,9);
}
